# Session-0

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp
assets/Shaders/: cube_default.frag  cube_default.vert  debug.frag  default.frag  default.vert
src/: CMakeLists.txt  main.cpp
src/Engine/: CMakeLists.txt  DnDEngine.cpp  DnDEngine.h  ZeroEngine.cpp  ZeroEngine.h
src/Engine/Core/: CMakeLists.txt  DnDEngine.cpp  DnDEngine.h
src/Engine/Core/Input/: IInput.h  InputController.h
src/Engine/Core/Input/GLFWInput/: GLFWInput.h
src/Engine/Core/Loaders/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  EngineSettings.cpp  EngineSettings.h  Loader.cpp  Loader.h  ProjectLoader.cpp  ProjectLoader.h
src/Engine/Core/Math/: CMakeLists.txt  Matrix4.h  Vector2.h  Vector3.h
src/Engine/Core/Math/Matrix/: CMakeLists.txt  Matrix4.cpp  Matrix4.h
src/Engine/Core/Math/Vector/: CMakeLists.txt  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
src/Engine/Core/Math/Vector/Vector3/: CMakeLists.txt  Vector3.cpp  Vector3.h
src/Engine/Core/Nodes/: Camera.cpp  Camera.h
src/Engine/Core/Physics/: AABB.cpp  AABB.h  Collision.cpp  Collision.h
src/Engine/Core/Project/: MapData.h  ProjectData.h  ProjectDefaults.cpp  ProjectDefaults.h  ProjectInfo.h  RequestChange.h  Tools.cpp  Tools.h
src/Engine/Core/Rendering Math/: Face.h  Material.h  Mesh.cpp  Mesh.h  ProjectContext.h  SceneObject.h  Transform.h  Vertex.h
src/Engine/Core/Rendering Math/Mesh/: Mesh.cpp  Mesh.h
src/Engine/Core/RenderingMath/: AssetCache.h  Face.h  Material.h  Ray.h  RenderContext.h  SceneObject.h  Transform.h  Vertex.h
src/Engine/Core/RenderingMath/Mesh/: CMakeLists.txt  LineMesh.cpp  LineMesh.h  Mesh.cpp  Mesh.h
src/Engine/Core/Scene/: RenderContext.h  RenderMode.h  SceneObject.h
src/Engine/Core/Scene/SceneObject/: SceneObject.cpp  SceneObject.h
src/Engine/Core/Utilities/: constants.h  getCurrentTime.h  helpers.cpp  helpers.h  parseMaterial.h  parseTransform.h  toLower.h
src/Engine/Renderer/: CMakeLists.txt  IRenderer.h  IShader.h
src/Engine/Renderer/OpenGLRenderer/: CMakeLists.txt  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h
src/Engine/States/: CMakeLists.txt  IState.h  StateManager.cpp  StateManager.h
src/Engine/States/EngineStates/: CMakeLists.txt  MapEditorState.cpp  MapEditorState.h  MapEditorTab.h  ProjectManagerState.cpp  ProjectManagerState.h
src/Engine/UI/: CMakeLists.txt  IUI.h  UIManager.cpp  UIManager.h
src/Engine/UI/EngineUI/: CMakeLists.txt  MapEditorUI.cpp  MapEditorUI.h  ProjectManagerUI.cpp  ProjectManagerUI.h
src/Engine/Window/: CMakeLists.txt  IWindow.h
src/Engine/Window/GLFWWindow/: CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.h
